[project]
name = "iran"
version = "0.1.0"
description = "Daily scraper for INSS Iran dashboard metrics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pillow>=11.0.0",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
]
